<resources>
    <string name="app_name">PumpController</string>
    <string name="above_all_title">全自动凝胶涂色脱色仪</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">START</string>
    <string name="btn_pause">PAUSE</string>
    <string name="btn_ff">FF</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_set">SET</string>
    <string name="data_title">实时状态</string>
    <string name="status_on">运行中</string>
    <string name="status_off">暂停</string>
    <string name="data_usr">用户:</string>
    <string name="data_usr_instance">Admin</string>
    <string name="data_step">步骤:</string>
    <string name="data_cycle">循环:</string>
    <string name="data_all_time">设定时间:</string>
    <string name="rt_title">染色脱色参数</string>
    <string name="rt_title_total_time">染色时间:</string>
    <string name="rt_title_water_time">水洗时间:</string>
    <string name="rt_title_cycle">脱色循环次数:</string>
    <string name="rt_title_each_time">单次脱色时间:</string>
    <string name="testVal">测试文字</string>
    <string name="title_activity_setting_view">SettingView</string>

    <string name="add_action">添加</string>

    <string-array name="bottle_sel">
        <item>一号瓶子</item>
        <item>二号瓶子</item>
        <item>三号瓶子</item>
        <item>四号瓶子</item>
        <item>五号瓶子</item>
    </string-array>

    <string name="fluid_quantity">输入流量</string>
    <string name="way_sel">正/反向</string>
    <string name="title_activity_simple_setting_view">SimpleSettingView</string>
</resources>
